Fix top navbar menu on mobile

--- a/public/css/smart-mockups-public.scss
+++ b/public/css/smart-mockups-public.scss
@@ -20,6 +20,10 @@ $dot_width: 40px;
 $dot_height: $dot_width;
 $discussion_panel_width: 360px;
 $discussion_panel_width_tablet: 260px;
+$breakpoint_xs: 480px;
+$breakpoint_sm: 768px;
+$breakpoint_md: 992px;
+$breakpoint_lg: 1200px;
 
 /**
  * Smart Mockups
@@ -62,7 +66,6 @@ body {
 		left: 0;
 		right: 0;
 		width: 100%;
-		height: 48px;
 		box-shadow: 0 10px 40px -10px rgba(0, 0, 0, 0.4);
 
 		background-color: #FFF;
@@ -101,6 +104,22 @@ body {
 				li {
 					border-right: none;
 					border-left: 1px solid #DCDCDC;
+				}
+
+				@media screen and (max-width: $breakpoint_xs) {
+					border-top: 1px solid #DCDCDC;
+
+					li {
+						display: table-cell;
+						float: none;
+					}
+				}
+			}
+
+			@media screen and (max-width: $breakpoint_xs) {
+				.sr-navbar {
+					display: table;
+					width: 100%;
 				}
 			}
 
@@ -692,7 +711,7 @@ body {
 		.feedback-action {
 			position: absolute;
 
-			top: 1px;
+			top: 5px;
 			right: 10px;
 
 			button {
@@ -1089,7 +1108,7 @@ body {
 	margin-left: -9px;
 }
 
-@media (max-width: 992px) {
+@media (max-width: $breakpoint_md) {
 	#sr-mockup-viewport {
 
 		.sr-mockup-discussion {
